410：410pre文档合入410分支及低错修改

--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/4.query/10.execution-plan/2.understand-the-execution-plan.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/4.query/10.execution-plan/2.understand-the-execution-plan.md
@@ -1,14 +1,14 @@
 # Understand an execution plan
 
-The display modes of execution plans vary with the database system. Execution plans in OceanBase Database are displayed in the form of trees. The key to understanding an execution plan is to understand its operators. This topic describes details about common execution plans that contain operators for table access by normal index primary key (TABLE SCAN operator), table access by global index primary key (TABLE LOOKUP operator), or join algorithms (JOIN operator).
+The display modes of execution plans vary with the database system. Execution plans in OceanBase Database are displayed in the form of trees. The key to understanding an execution plan is to understand its operators. This topic describes details about common execution plans that contain operators for table access by index primary key (TABLE SCAN operator) and join algorithms (JOIN operator).
 
 ## Table access by index primary key
 
-In OceanBase Database, the table access logic for normal indexes is encapsulated in the `TABLE SCAN` operator. For global indexes, however, the logic of table access by index primary key is completed by the `TABLE LOOKUP` operator.
+In OceanBase database v4.1, the logic of index back is encapsulated in the `TABLE SCAN` operator for both normal and global indexes. When the execution plan is displayed, `is_index_back` identifies whether the operator needs to go back to the table, and `is_global_index` identifies whether the operator is scanning the global index.
 
 The following sample code shows an execution plan that contains the `TABLE SCAN` operator:
 
-```sql
+```shell
 obclient> CREATE TABLE t1(c1 INT PRIMARY KEY, c2 INT, c3 INT, c4 INT, INDEX k1(c2,c3));
 Query OK, 0 rows affected
 
@@ -49,10 +49,14 @@ Outputs & filters:
       range_cond([t1.c2(0x7f227decec40) < 1(0x7f227dece5f0)])
 
 Q3:
-obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY HASH(c1) PARTITIONS 4;
+obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY 
+       HASH(c1) PARTITIONS 4;
+
 Query OK, 0 rows affected 
+
 obclient> CREATE INDEX i2 ON t2(c2) GLOBAL;
 Query OK, 0 rows affected 
+
 obclient> EXPLAIN SELECT * FROM t2 WHERE c2 = 1;
 +------------------------------------------------------------------+
 | Query Plan                                                       |
@@ -70,23 +74,23 @@ obclient> EXPLAIN SELECT * FROM t2 WHERE c2 = 1;
 |       range_key([t2.c2], [t2.c1]), range(1,MIN ; 1,MAX),         |
 |       range_cond([t2.c2 = 1])                                    |
 +------------------------------------------------------------------+
-   
 ```
 
 In the preceding sample code, the `outputs & filters` section in the execution plan shows in detail the output information of the `TABLE SCAN` operator. The following table describes the parameters in the output information.
 
 | **Information** | **Description** |
-|---------------------|---------------------|
+|---------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | operator | `TABLE SCAN` and `TABLE GET` are the two forms of the `TABLE SCAN` `operator`. <ul><li>`TABLE SCAN` performs a range scan and returns zero or multiple rows of data. </li><li> `TABLE GET` locates a row by using a primary key and returns zero or one row of data.   </li></ul> |
 | name | The index selected for accessing data. The name of the selected index follows the table name. The absence of the index name means that the primary table is scanned.  In OceanBase Database, the primary table has the same structure as the index, and the primary table is an index.  |
 | output | The output columns of the operator.  |
 | filter | The filter predicates of the operator.  In this example, `filter` is set to `nil` because no filter condition is configured for the `TABLE GET` operator in Q1.  |
 | partitions | The partitions to be scanned in the query.  |
 | is_index_back | Indicates whether table access is required by the operator.  In Q1, the primary table is selected. Therefore, table access is not required. In query Q2, where the indexed columns are `c2, c3, and c1`, table access by index primary key is required because the query needs to return column `c4`.  |
-| is_global_index | Indicates whether table access is scanning the global index. This includes scanning global index and lookuping global index . For example, in the Q2 query, the index used is a normal index, so `is_global_index` is `false`. In Q3 query, the `i2` index of `t2` table is used, and the `i2` index is a global index, so `is_global_index` is `true`.|
+| is_global_index | Indicates whether table access is scanning the global index. This includes scanning global index and lookuping global index . For example, in the Q2 query, the index used is a normal index, so `is_global_index` is `false`. In Q3 query, the `i2` index of `t2` table is used, and the `i2` index is a global index, so `is_global_index` is `true` .|
+
 | filter_before_indexback | Corresponds to each `filter` and indicates whether the `filter` directly applies to the index or after the TABLE ACCESS BY INDEX PRIMARY KEY operation.  For example, in query Q2, `filter` `c3 < 1`can be directly applied to the index, which reduces the number of TABLE ACCESS BY INDEX PRIMARY KEY operations. However, `filter` `c4 < 1` can be applied only after column `c4` is fetched through table access.  |
 | range_key/range/range_cond | <ul><li>`range_key`: the `rowkey` columns of the index. </li><li> `range`: indicates the start and end positions in an index scan. You can verify whether it is a full table scan based on the value of `range`. For example, in a scenario with three `rowkey` columns, `range(MIN, MIN, MIN; MAX, MAX, MAX)` represents a full table scan.  </li><li> `range_cond`: predicates that determine the start and end positions of an index scan.  </li></ul> |
-    
+
 ## Join order
 
 `JOIN` operators join data in two tables based on specified conditions. ``Join operations are classified into three types: inner join, outer join, and semi/anti join.
@@ -105,7 +109,7 @@ In the following example, queries Q1 and Q2 use NLJ based on the hint. Operator 
 
 4. Repeat step 1 until operator 1 stops iteration.
 
-```sql
+```shell
 obclient> CREATE TABLE t1 (c1 INT, c2 INT);
 Query OK, 0 rows affected
 
@@ -137,7 +141,7 @@ Outputs & filters:
 
 The `MATERIAL` operator materializes the data output of subsequent operators.
 
-```sql
+```shell
 Q2:
 obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1\G
 *************************** 1. row ***************************
@@ -170,7 +174,7 @@ In the preceding sample code, the `outputs & filters` section in the execution p
 
 In the following example, no JOIN condition is specified in query Q3. The No. 0 operator is displayed as a `NESTED-LOOP JOIN CARTESIAN`, which is logically an NLJ operator with no JOIN conditions.
 
-```sql
+```shell
 Q3:
 obclient> EXPLAIN SELECT t1.c2 + t2.d2 FROM t1, t2\G
 *************************** 1. row ***************************
@@ -198,9 +202,9 @@ Outputs & filters:
 
 In the following example, query Q4 uses MJ by adding the hint `USE_MERGE`. Operator 0 is an MJ operator and has two subnodes: operators 1 and 3. The operator merges data of the left and right subnodes, and therefore requires that the data of the two subnodes be ordered in relation to the JOIN column.
 
-Take query Q4 as an example. The JOIN condition is `t1.c2 = t2.d2`, which means sorting data of `t1` by `c2`, and data of `t2` by `d2`. In query Q4, the output of the No. 2 operator is unordered, and the output of the No. 4 operator is sorted by `d2`. Both of them do not meet the requirement of MJ. Therefore, the No. 1 and No. 3 operators are assigned for sorting.
+Take query Q4 as an example. The JOIN condition is `t1.c2 = t2.d2`, which means sorting data of `t1` by `c2`, and data of `t2` by `d2`. In query Q4, the output of the No. 2 operator is unordered, and the output of the No. 4 operator is sorted by `d1`. Both of them do not meet the requirement of MJ. Therefore, the No. 1 and No. 3 operators are assigned for sorting.
 
-```sql
+```shell
 Q4:
 obclient>EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2
                 WHERE c2 = d2 AND c1 + d1 > 10\G
@@ -229,7 +233,7 @@ Outputs & filters:
 
 In the following example, the JOIN condition in query Q5 is `t1.c1 = t2.d1`, which means sorting data of `t1` by `c1`, and data of `t2` by `d1`. In this execution plan, the primary table scan is performed for `t2`, and the results are sorted by `d1`. Therefore, it is unnecessary to assign an additional `SORT` operator. Ideally, proper indexes are selected for tables on the left and right of the `join`, and the data order specified by the indexes can meet the requirements of MJ. In this case, no `SORT` operator is needed.
 
-```sql
+```shell
 Q5:
 obclient>EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1\G
 *************************** 1. row ***************************
@@ -270,7 +274,7 @@ In the following example, query Q6 uses HJ based on the `USE_HASH` hint. Operato
 
 2. Read data from the subnode on the right to generate a hash value based on the JOIN column, such as`t2.d1`, and try to join with the data of `t1` in the corresponding hash table.
 
-```sql
+```shell
 Q6:
 obclient> EXPLAIN SELECT /*+USE_HASH(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2
       WHERE c1 = d1 AND c2 + d2 > 1\G
@@ -301,4 +305,3 @@ In the preceding sample code, the `outputs & filters` section in the execution p
 | filter | The filter conditions of the operator.  In this example, `filter` is set to `nil` because no filter condition is configured for the HJ operator.  |
 | equal_conds | The equivalent join. The JOIN columns on the left and right sides are used to calculate the hash value.  |
 | other_conds | Other JOIN conditions.  For example, Q6 has an addition join condition: `t1.c2 + t2.d2 > 1`.  |
-
