--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/4.Query-table-data/10.Execution-plan/02.implementation-understanding-plan.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/4.Query-table-data/10.Execution-plan/02.implementation-understanding-plan.md
@@ -1,10 +1,10 @@
 # Understand an execution plan
 
-The display modes of execution plans vary with the database system. Execution plans in OceanBase Database are displayed in the form of trees. The key to understanding an execution plan is to understand its operators. This topic describes details about common execution plans that contain operators for table access by normal index primary key (TABLE SCAN operator), table access by global index primary key (TABLE LOOKUP operator), or join algorithms (JOIN operator).
+The display modes of execution plans vary with the database system. Execution plans in OceanBase Database are displayed in the form of trees. The key to understanding an execution plan is to understand its operators. This topic describes details about common execution plans that contain operators for table access by index primary key (TABLE SCAN operator) and join algorithms (JOIN operator).
 
-## Table access by normal index primary key
+## Table access by index primary key
 
-In OceanBase Database, the table access logic for normal indexes is encapsulated in the `TABLE SCAN` operator. For global indexes, however, the logic of table access by index primary key is completed by the `TABLE LOOKUP` operator.
+In OceanBase database v4.1, the logic of index back is encapsulated in the `TABLE SCAN` operator for both normal and global indexes. When the execution plan is displayed, `is_index_back` identifies whether the operator needs to go back to the table, and `is_global_index` identifies whether the operator is scanning the global index.
 
 ### Examples
 
@@ -12,14 +12,14 @@ The following sample code shows an execution plan that contains the `TABLE SCAN`
 
 1. Create the `ts_ny` table.
 
-   ```unknow
+   ```shell
    obclient> CREATE TABLE ts_ny(c1 NUMBER PRIMARY KEY,c2 NUMBER,c3 NUMBER,c4 NUMBER,INDEX K5(c2));
    Query OK, 0 rows affected
    ```
 
 2. View the detailed execution plan.
 
-   ```unknow
+   ```shell
    obclient> EXPLAIN EXTENDED SELECT * FROM ts_ny WHERE c1 = 1\G
    *************************** 1. row ***************************
    Query Plan: ===================================
@@ -64,6 +64,47 @@ The following sample code shows an execution plan that contains the `TABLE SCAN`
    1 row in set
    ```
 
+The following example shows the execution plan for a globally indexed back table that contains the `TABLE SCAN` operator.
+1. Create the `ts_ny` table.
+
+   ```shell
+   obclient>  CREATE TABLE tl_ny(c1 NUMBER PRIMARY KEY, c2 NUMBER, c3 NUMBER) PARTITION BY
+              HASH(c1) PARTITIONS 4;
+   Query OK, 0 rows affected
+   ```
+
+2. Create the `tin` global index.
+
+   ```shell
+   obclient> CREATE INDEX tin ON tl_ny(c2) GLOBAL;
+   Query OK, 0 rows affected
+   ```
+
+3. View the execution plan.
+
+   ```shell
+   obclient> EXPLAIN SELECT * FROM tl_ny WHERE c2 = 1;
+   +---------------------------------------------------------------------------+
+   | Query Plan                                                                |
+   +---------------------------------------------------------------------------+
+   | ============================================================              |
+   | |ID|OPERATOR              |NAME      |EST.ROWS|EST.TIME(us)|              |
+   | ------------------------------------------------------------              |
+   | |0 |DISTRIBUTED TABLE SCAN|TL_NY(TIN)|1       |28          |              |
+   | ============================================================              |
+   | Outputs & filters:                                                        |
+   | -------------------------------------                                     |
+   |   0 - output([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), filter(nil), rowset=256 |
+   |       access([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), partitions(p0)          |
+   |       is_index_back=true, is_global_index=true,                           |
+   |       range_key([TL_NY.C2], [TL_NY.C1]), range(1,MIN ; 1,MAX),            |
+   |       range_cond([TL_NY.C2 = 1])                                          |
+   +---------------------------------------------------------------------------+
+   12 rows in set (0.00 sec)
+   ```
+
+
+
 ### Parameters
 
 In the preceding sample code, the `outputs & filters` section in the execution plan shows in detail the output information of the `TABLE SCAN` operator. The following table describes the parameters in the output information.
@@ -76,65 +117,9 @@ In the preceding sample code, the `outputs & filters` section in the execution p
 | filter | The filter predicates of the operator.  |
 | partitions | The partitions to be scanned in the query.  |
 | is_index_back | Indicates whether table access is required by the operator.  |
+| is_global_index | Indicates whether table access is scanning the global index. |
 | filter_before_indexback | Corresponds to each `filter` and indicates whether the `filter` directly applies to the index or after the TABLE ACCESS BY INDEX PRIMARY KEY operation.  |
 | range_key/range/range_cond | <ul><li>`range_key`: the `rowkey` columns of the index. </li><li> `range`: indicates the start and end positions in an index scan. You can verify whether it is a full table scan based on the value of `range`. For example, in a scenario with three `rowkey` columns, `range(MIN, MIN, MIN; MAX, MAX, MAX)` represents a full table scan.   </li><li> `range_cond`: predicates that determine the start and end positions of an index scan.  </li></ul> |
-
-## Table access by global index primary key
-
-The `TABLE LOOKUP` operator represents the logic of table access by global index primary key.
-
-The following sample code describes an execution plan that contains the `TABLE LOOKUP` operator.
-
-### Examples
-
-The following sample code describes an execution plan that contains the `TABLE LOOKUP` operator.
-
-1. Create the `tl_ny` table.
-
-   ```unknow
-   obclient>  CREATE TABLE tl_ny(c1 NUMBER PRIMARY KEY, c2 NUMBER, c3 NUMBER) PARTITION BY
-              HASH(c1) PARTITIONS 4;
-   Query OK, 0 rows affected
-   ```
-
-2. Create the global index `tin`.
-
-   ```unknow
-   obclient> CREATE INDEX tin ON tl_ny(c2) GLOBAL;
-   Query OK, 0 rows affected
-   ```
-
-3. View the execution plan.
-
-   ```unknow
-   obclient> EXPLAIN SELECT * FROM tl_ny WHERE c2 = 1\G
-   *************************** 1. row ***************************
-   Query Plan: =======================================================
-   |ID|OPERATOR               |NAME      |EST. ROWS|COST |
-   -------------------------------------------------------
-   |0 |TABLE LOOKUP           |TL_NY     |3960     |38876|
-   |1 | DISTRIBUTED TABLE SCAN|TL_NY(TIN)|3960     |1843 |
-   =======================================================
-
-   Outputs & filters:
-   -------------------------------------
-     0 - output([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), filter(nil),
-         partitions(p[0-3])
-     1 - output([TL_NY.C1]), filter(nil),
-         access([TL_NY.C1]), partitions(p0)
-
-   1 row in set
-   ```
-
-### Parameters
-
-In the preceding sample code, operator 1 scans the global index `tin`, and operator 0 specifies to retrieve columns that are not in the global index from the primary table. The `outputs & filters` section in the execution plan shows in detail the output information of the `TABLE LOOKUP` operator. The following table describes the parameters in the output information.
-
-| **Information** | **Description** |
-|------------|---------------------------------------------------------------------------|
-| output | The output columns of the operator.  |
-| filter | The filter predicates of the operator.  In this example, `filter` is set to `nil` because no filter condition is configured for the `TABLE LOOKUP` operator.  |
-| partitions | The partitions to be scanned in the query.  |
 
 ## Join order
 
@@ -158,21 +143,21 @@ In the following example, examples 1 and 2 use NLJ based on the hint. Operator 0
 
 1. Create the `tnlj1` table.
 
-   ```unknow
+   ```shell
    obclient> CREATE TABLE tnlj1 (c1 NUMBER, c2 NUMBER);
    Query OK, 0 rows affected
    ```
 
 2. Create the `tnlj2` table.
 
-   ```unknow
+   ```shell
    obclient>  CREATE TABLE tnlj2 (d1 NUMBER, d2 NUMBER, PRIMARY KEY (d1));
    Query OK, 0 rows affected
    ```
 
 3. View the execution plan.
 
-   ```unknow
+   ```shell
    obclient> EXPLAIN SELECT /*+USE_NL(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2
              FROM tnlj1, tnlj2 WHERE c2 = d2\G
    *************************** 1. row ***************************
@@ -204,7 +189,7 @@ In the following example, examples 1 and 2 use NLJ based on the hint. Operator 0
 
 #### Example 2
 
-```unknow
+```shell
 obclient> EXPLAIN SELECT /*+USE_NL(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1, tnlj2
           WHERE c1 = d1\G
 *************************** 1. row ***************************
@@ -241,7 +226,7 @@ In the preceding sample code, the `outputs & filters` section in the execution p
 
 In the following sample code, no join condition is specified in the query, and operator 0 is `NESTED-LOOP JOIN CARTESIAN`, which is logically an NLJ operator that contains no join conditions.
 
-```unknow
+```shell
 obclient> EXPLAIN SELECT tnlj1.c2 + tnlj2.d2 FROM tnlj1,tnlj2\G
 *************************** 1. row ***************************
 Query Plan: ============================================================
