--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
@@ -39,7 +39,7 @@ SET column_name = value [, column_name = value]...
 
 示例 4：`t_insert` 表中 更新 `id = 3` 所在行的 `name` 列的值为 `UK`。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM t_insert;
 +----+------+-------+------------+
 | ID | NAME | VALUE | GMT_CREATE |
@@ -67,7 +67,7 @@ obclient [SYS]> SELECT * FROM t_insert;
 
 但是，当表上有唯一性约束时，如果更新为相同的记录，系统会报错，数据更新失败，报错示例如下。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM t_insert;
 +----+------+-------+------------+
 | ID | NAME | VALUE | GMT_CREATE |
@@ -87,9 +87,9 @@ ORA-00001: unique constraint 'US' for key 'UK_NAME' violated
 
 ### 更新所有记录
 
-示例 1：更新 `t_insert` 表中 `value` 列的所有值，并将所有值加 1。
+示例 1：更新 `t_insert` 表中 `value` 列的所有值，并将所有值加 `1`。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM t_insert;
 +----+------+-------+------------+
 | ID | NAME | VALUE | GMT_CREATE |
@@ -117,17 +117,50 @@ obclient [SYS]> SELECT * FROM t_insert;
 
 执行 `UPDATE` 语句时要注意控制事务不要太大，您可以通过 `WHERE` 关键字来控制范围。这是因为不带条件更新数据时，如果记录数达到几十万或者几百万，会有大事务产生，可能会导致执行失败。因事务过大导致的具体报错信息如下所示。
 
-```sql
+```shell
 obclient [SYS]> UPDATE t_insert SET value = value+1;
 ERROR 4012 (HY000): Timeout
 ```
 
 示例 2：在 `t_insert` 表中，对 `value` 值为 `10003` 的所有列，将其值更新为 `value+1`。
 
-```sql
+```shell
 obclient [SYS]> UPDATE t_insert SET value = value+1 WHERE value = 10003;
 Query OK, 1 row affected
 Rows matched: 1  Changed: 1  Warnings: 0
+```
+
+## 通过 DBLink 使用 UPDATE 语句更新数据
+
+当前 OceanBase 数据库支持通过 DBLink 向 OceanBase 数据库（Oracle 模式）和 Oracle 数据库中更新数据。
+
+通过 DBLink 将远端数据库表 `t2` 中 `C1` 列的值修改为 `3` 的示例如下：
+
+```shell
+obclient> SET ob_trx_timeout = 1000000000;
+Query OK, 0 rows affected
+
+obclient> SELECT * FROM t2@ob_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    2 |    2 |
++------+------+
+1 row in set
+
+obclient> UPDATE t2@ob_dblink SET C1 = 3;
+Query OK, 1 row affected
+
+obclient> commit;
+Query OK, 0 rows affected
+
+obclient> SELECT * FROM t2@ob_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    3 |    2 |
++------+------+
+1 rows in set
 ```
 
 ## 相关文档
@@ -137,3 +170,5 @@ Rows matched: 1  Changed: 1  Warnings: 0
 * [删除数据](3.delete-data-of-oracle-mode.md)
 
 * [替换数据](4.replace-data-of-oracle-mode.md)
+
+* [通过 DBLink 修改远端数据库中的数据](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
