--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -41,7 +41,7 @@ DELETE FROM table_name [ WHERE condition ];
 
 示例 1：删除 `t_insert` 表中符合 `value = 10004` 的所有行记录。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM t_insert;
 +----+------+-------+------------+
 | ID | NAME | VALUE | GMT_CREATE |
@@ -70,7 +70,7 @@ obclient [SYS]> SELECT * FROM t_insert;
 
 示例 2：删除表 `t_insert` 中的所有记录。
 
-```sql
+```shell
 obclient [SYS]> DELETE FROM t_insert;
 Query OK, 3 row affected
 ```
@@ -79,7 +79,7 @@ Query OK, 3 row affected
 
 示例 3： 分批删除 `value < 20000`，`value < 30000`，`value < 40000` 的数据。
 
-```sql
+```shell
 obclient [SYS]> DELETE FROM t_insert WHERE value < 20000;
 
 obclient [SYS]> DELETE FROM t_insert WHERE value < 30000;
@@ -99,11 +99,45 @@ TRUNCATE [TABLE] table_name;
 
 示例 4：通过 `TRUNCATE TABLE` 语句清空表 `ordr` 表中的所有数据。
 
-```sql
+```shell
 obclient> TRUNCATE TABLE t_insert;
 ```
 
 更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/45.truncate-table-of-oracle-mode.md)。
+
+## 通过 DBLink 使用 DELETE 语句删除数据
+
+当前 OceanBase 数据库支持通过 DBLink 删除 OceanBase 数据库（Oracle 模式）和 Oracle 数据库中的数据。
+
+通过 DBLink 删除远端数据库表 `t5` 中 `C2 = 7` 的数据行的示例如下：
+
+```shell
+obclient> SET ob_trx_timeout = 1000000000;
+Query OK, 0 rows affected
+
+obclient> SELECT * FROM t5@orcl_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    7 |    7 |
+|    8 |    8 |
++------+------+
+2 row in set
+
+obclient> DELETE FROM t5@orcl_dblink WHERE C2 = 7;
+Query OK, 1 row affected
+
+obclient> commit;
+Query OK, 0 rows affected
+
+obclient> SELECT * FROM t5@orcl_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    8 |    8 |
++------+------+
+1 row in set
+```
 
 ## 相关文档
 
@@ -112,3 +146,5 @@ obclient> TRUNCATE TABLE t_insert;
 * [更新数据](2.update-data-of-oracle-mode.md)
 
 * [替换数据](4.replace-data-of-oracle-mode.md)
+
+* [通过 DBLink 修改远端数据库中的数据](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
