--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/3.condition-query-of-oracle-mode.md
@@ -42,7 +42,7 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name = const_v
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT empname, deptno FROM emp WHERE deptno = 30;
 +---------+--------+
 | empname | deptno |
@@ -81,7 +81,7 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name != const_
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT empname, deptno FROM emp WHERE deptno <> 30;
 +---------+--------+
 | EMPNAME | DEPTNO |
@@ -123,7 +123,7 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name > const_v
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT empname, deptno FROM emp WHERE deptno > 30;
 +---------+--------+
 | EMPNAME | DEPTNO |
@@ -180,7 +180,7 @@ query_condition AND query_condition;
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT empname, deptno, sal FROM emp WHERE deptno<=30 AND sal > 1000;
 +---------+--------+------+
 | EMPNAME | DEPTNO | SAL  |
@@ -202,7 +202,7 @@ query_condition OR query_condition;
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT empname, deptno, sal FROM emp WHERE deptno <= 30 OR sal > 1000;
 +---------+--------+------+
 | EMPNAME | DEPTNO | SAL  |
@@ -227,13 +227,24 @@ obclient> SELECT empname, deptno, sal FROM emp WHERE deptno <= 30 OR sal > 1000;
 
 语法含义是查找指定的属性列值与 `pattern` 相匹配的元组。`pattern` 可以是一个完整的字符串，也可以含有通配符 `%` 和 `_` 。其中：
 
-* 下划线 (_) 表示匹配任意一个字符。
+* 下划线 `_` 表示匹配任意一个字符。
 
-* 百分号 (%) 表示可以匹配值中的零个或多个字符。模式"%"不能匹配 `NULL`。
+* 百分号 `%` 表示可以匹配值中的零个或多个字符。模式 `%` 不能匹配 `NULL`。
 
-如下示例为查询员工名前四个字母为"ALLE",最后一个为任意字符的数据。
+<main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>OceanBase 数据库 Oracle 模式中满足以下条件，会将 <code>like</code> 改成 <code>=</code> 比较：</p>
+    <p>
+     <ul>
+      <li><code>pattern</code> 不包含 <code>%</code> 或 <code>_</code> 通配符，没有 <code>escape</code>。</li>
+      <li>字段类型不是 <code>LOB</code>。Oracle 模式下 <code>LOB</code> 类型不支持 <code>=</code> 比较，因此不可转换。</li>
+      <li><code>pattern</code>不是固定长度的 <code>char</code> 或 <code>nchar</code> 类型。</li>
+     </ul></p>
+</main>
 
-```sql
+如下示例为查询员工名前四个字母为 `ALLE`，最后一个为任意字符的数据。
+
+```shell
 obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'ALLE_';
 +---------+--------+
 | EMPNAME | DEPTNO |
@@ -243,9 +254,9 @@ obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'ALLE_';
 1 row in set
 ```
 
-如下示例为查询员工姓名首字母为"A" 的数据。
+如下示例为查询员工姓名首字母为 `A` 的数据。
 
-```sql
+```shell
 obclient> SELECT empname, deptno FROM emp WHERE empname LIKE 'A%';
 +---------+--------+
 | EMPNAME | DEPTNO |
@@ -276,7 +287,7 @@ SELECT column_name [,column_name...] FROM table_name WHERE
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM emp WHERE sal BETWEEN 2000 AND 2999;
 +-------+---------+---------+------+-----------+------+------+--------+------+
 | EMPNO | EMPNAME | JOB     | MGR  | HIREDATE  | SAL  | COMM | DEPTNO | AGE  |
@@ -306,7 +317,7 @@ column_name [NOT] IN (const_value,const_value,const_value...);
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM emp WHERE deptno IN (30,40,50,60);
 +-------+---------+---------+------+-----------+------+------+--------+------+
 | EMPNO | EMPNAME | JOB     | MGR  | HIREDATE  | SAL  | COMM | DEPTNO | AGE  |
@@ -332,7 +343,7 @@ column_name IS NULL;
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM emp WHERE comm IS NULL;
 +-------+---------+---------+------+-----------+------+------+--------+------+
 | EMPNO | EMPNAME | JOB     | MGR  | HIREDATE  | SAL  | COMM | DEPTNO | AGE  |
@@ -357,7 +368,7 @@ column_name IS NOT NULL;
 
 示例如下：
 
-```sql
+```shell
 obclient> SELECT * FROM emp WHERE comm IS NOT NULL;
 +-------+---------+----------+------+-----------+------+------+--------+------+
 | EMPNO | EMPNAME | JOB      | MGR  | HIREDATE  | SAL  | COMM | DEPTNO | AGE  |
@@ -366,3 +377,7 @@ obclient> SELECT * FROM emp WHERE comm IS NOT NULL;
 +-------+---------+----------+------+-----------+------+------+--------+------+
 1 row in set
 ```
+
+## 相关文档
+
+[模式匹配条件](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/6.pattern-matching-conditions-of-oracle-mode.md)
