--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/9.execution-plan-of-oracle-mode/2.understand-the-execution-plan-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/9.execution-plan-of-oracle-mode/2.understand-the-execution-plan-of-oracle-mode.md
@@ -1,10 +1,10 @@
 # 理解执行计划
 
-在数据库系统中，不同的数据库的执行计划展示方式有所不同。OceanBase 数据库的执行计划在内部通常是以树的形式来表示的，了解执行计划的算子是理解执行计划的关键。本文通过具体示例介绍如何理解普通索引回表（TABLE SCAN 算子）、全局索引回表（TABLE LOOKUP 算子）和联接算法（JOIN 算子）等常见的执行计划。
+在数据库系统中，不同的数据库的执行计划展示方式有所不同。OceanBase 数据库的执行计划在内部通常是以树的形式来表示的，了解执行计划的算子是理解执行计划的关键。本文通过具体示例介绍如何理解索引回表（TABLE SCAN 算子）和联接算法（JOIN 算子）等常见的执行计划。
 
-## 普通索引回表
+## 索引回表
 
-在 OceanBase 数据库中，对于普通索引，索引的回表逻辑是封装在 `TABLE SCAN` 算子中的；而对于全局索引，索引的回表逻辑由 `TABLE LOOKUP` 算子完成。
+在 OceanBase 数据库 v4.1 中，对于普通索引和全局索引，索引回表的逻辑都封装在`TABLE SCAN` 算子中的。在执行计划展示时，会有 `is_index_back` 标识算子是否需要回表，以及 `is_global_index` 标识算子是否是扫描全局索引。
 
 ### 示例
 
@@ -12,14 +12,14 @@
 
 1. 创建 `ts_ny` 表。
 
-   ```unknow
+   ```shell
    obclient> CREATE TABLE ts_ny(c1 NUMBER PRIMARY KEY,c2 NUMBER,c3 NUMBER,c4 NUMBER,INDEX K5(c2));
    Query OK, 0 rows affected
    ```
 
 2. 查看详细的执行计划。
 
-   ```unknow
+   ```shell
    obclient> EXPLAIN EXTENDED SELECT * FROM ts_ny WHERE c1 = 1\G
    *************************** 1. row ***************************
    Query Plan: ===================================
@@ -64,6 +64,46 @@
    1 row in set
    ```
 
+如下示例为包含 `TABLE SCAN` 算子的全局索引回表的执行计划。
+
+1. 创建 `tl_ny` 表。
+
+   ```shell
+   obclient>  CREATE TABLE tl_ny(c1 NUMBER PRIMARY KEY, c2 NUMBER, c3 NUMBER) PARTITION BY
+              HASH(c1) PARTITIONS 4;
+   Query OK, 0 rows affected
+   ```
+
+2. 创建全局索引 `tin`。
+
+   ```shell
+   obclient> CREATE INDEX tin ON tl_ny(c2) GLOBAL;
+   Query OK, 0 rows affected
+   ```
+
+3. 查看执行计划。
+
+   ```shell
+   obclient> EXPLAIN SELECT * FROM tl_ny WHERE c2 = 1;
+   +---------------------------------------------------------------------------+
+   | Query Plan                                                                |
+   +---------------------------------------------------------------------------+
+   | ============================================================              |
+   | |ID|OPERATOR              |NAME      |EST.ROWS|EST.TIME(us)|              |
+   | ------------------------------------------------------------              |
+   | |0 |DISTRIBUTED TABLE SCAN|TL_NY(TIN)|1       |28          |              |
+   | ============================================================              |
+   | Outputs & filters:                                                        |
+   | -------------------------------------                                     |
+   |   0 - output([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), filter(nil), rowset=256 |
+   |       access([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), partitions(p0)          |
+   |       is_index_back=true, is_global_index=true,                           |
+   |       range_key([TL_NY.C2], [TL_NY.C1]), range(1,MIN ; 1,MAX),            |
+   |       range_cond([TL_NY.C2 = 1])                                          |
+   +---------------------------------------------------------------------------+
+   12 rows in set (0.00 sec)
+   ```
+
 ### 参数解释
 
 上述示例中，执行计划展示中的 `outputs & filters` 详细展示了 `TABLE SCAN` 算子的输出信息，其含义如下表所示。
@@ -76,65 +116,9 @@
 | filter                                      | 该算子的过滤谓词。             |
 | partitions                                  | 查询需要扫描的分区。                                                                                                                                                                                                                                                                                                                      |
 | is_index_back                               | 该算子是否需要回表。    |
+| is_global_index                             | 该算子是否是扫描全局索引。 |
 | filter_before_indexback                     | 与每个 `filter` 对应，表明该 `filter` 是可以直接在索引上进行计算，还是需要索引回表之后才能计算。           |
 |  range_key/range/range_cond | <ul><li>`range_key`：索引的 `rowkey` 列。</li><li> `range`：索引开始扫描和结束扫描的位置。判断是否是全表扫描需要关注 `range` 的范围。例如，对于一个 `rowkey` 有三列的场景，`range(MIN,MIN, MIN ; MAX, MAX, MAX)` 代表的就是真正意义上的全表扫描。  </li><li> `range_cond`：决定索引开始扫描和结束扫描位置的相关谓词。 </li></ul>   |
-
-## 全局索引回表
-
-`TABLE LOOKUP` 算子用于表示全局索引的回表逻辑。
-
-如下示例为包含 `TABLE LOOKUP` 算子的执行计划。
-
-### 示例
-
-如下示例为包含 `TABLE LOOKUP` 算子的执行计划。
-
-1. 创建 `tl_ny` 表。
-
-   ```unknow
-   obclient>  CREATE TABLE tl_ny(c1 NUMBER PRIMARY KEY, c2 NUMBER, c3 NUMBER) PARTITION BY
-              HASH(c1) PARTITIONS 4;
-   Query OK, 0 rows affected
-   ```
-
-2. 创建全局索引 `tin`。
-
-   ```unknow
-   obclient> CREATE INDEX tin ON tl_ny(c2) GLOBAL;
-   Query OK, 0 rows affected
-   ```
-
-3. 查看执行计划。
-
-   ```unknow
-   obclient> EXPLAIN SELECT * FROM tl_ny WHERE c2 = 1\G
-   *************************** 1. row ***************************
-   Query Plan: =======================================================
-   |ID|OPERATOR               |NAME      |EST. ROWS|COST |
-   -------------------------------------------------------
-   |0 |TABLE LOOKUP           |TL_NY     |3960     |38876|
-   |1 | DISTRIBUTED TABLE SCAN|TL_NY(TIN)|3960     |1843 |
-   =======================================================
-   
-   Outputs & filters:
-   -------------------------------------
-     0 - output([TL_NY.C1], [TL_NY.C2], [TL_NY.C3]), filter(nil),
-         partitions(p[0-3])
-     1 - output([TL_NY.C1]), filter(nil),
-         access([TL_NY.C1]), partitions(p0)
-   
-   1 row in set
-   ```
-
-### 参数解释
-
-上述示例中，1 号算子是扫描全局索引 `tin`，0 号算子表明从主表中获取不在全局索引的列。执行计划展示中的 `outputs & filters` 详细展示了 `TABLE LOOKUP` 算子的输出信息，其含义如下表所示。
-
-|  **信息名称**  |                                  **含义**                                   |
-|------------|---------------------------------------------------------------------------|
-| output     | 该算子的输出列。                                                                  |
-| filter     | 该算子的过滤谓词。 由于示例中 `TABLE LOOKUP` 算子没有设置 `filter`，所以为 `nil`。 |
-| partitions | 查询需要扫描的分区。                                                                |
 
 ## 联接顺序
 
@@ -152,27 +136,27 @@ OceanBase 数据库支持的 `JOIN` 算子主要有 `NESTED LOOP JOIN (NLJ)`、`
 
 3. 联接 1 和 2 号算子的输出结果，并执行过滤条件，输出结果。
 
-4. 重复执行第一步，直到 1 号算子迭代结束。
+4. 重复执行步骤一，直到 1 号算子迭代结束。
 
 #### 示例 1
 
 1. 创建 `tnlj1` 表。
 
-   ```unknow
+   ```shell
    obclient> CREATE TABLE tnlj1 (c1 NUMBER, c2 NUMBER);
    Query OK, 0 rows affected
    ```
 
 2. 创建 `tnlj2` 表。
 
-   ```unknow
+   ```shell
    obclient>  CREATE TABLE tnlj2 (d1 NUMBER, d2 NUMBER, PRIMARY KEY (d1));
    Query OK, 0 rows affected
    ```
 
 3. 查看执行计划。
 
-   ```unknow
+   ```shell
    obclient> EXPLAIN SELECT /*+USE_NL(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2
              FROM tnlj1, tnlj2 WHERE c2 = d2\G
    *************************** 1. row ***************************
@@ -198,14 +182,14 @@ OceanBase 数据库支持的 `JOIN` 算子主要有 `NESTED LOOP JOIN (NLJ)`、`
    1 row in set
    ```
 
-  <main id="notice" type='explain'>
+    <main id="notice" type='explain'>
     <h4>说明</h4>
     <p><code>MATERIAL</code> 算子用于物化下层算子输出的数据。</p>
-  </main>
+    </main>
 
 #### 示例 2
 
-```unknow
+```shell
 obclient> EXPLAIN SELECT /*+USE_NL(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1, tnlj2
           WHERE c1 = d1\G
 *************************** 1. row ***************************
@@ -242,7 +226,7 @@ Outputs & filters:
 
 如下示例中，查询中没有指定任何的联接条件，0 号算子展示成了一个 `NESTED-LOOP JOIN CARTESIAN`，逻辑上它还是一个 NLJ 算子，代表一个没有任何联接条件的 NLJ。
 
-```unknow
+```shell
 obclient> EXPLAIN SELECT tnlj1.c2 + tnlj2.d2 FROM tnlj1,tnlj2\G
 *************************** 1. row ***************************
 Query Plan: ============================================================
@@ -273,7 +257,7 @@ Outputs & filters:
 
 以示例 4 查询为例，联接条件为 `tnlj1.c2 = tnlj2.d2`，它要求表 `tnlj1` 的数据是按照 `c2` 列排序的，表 `tnlj2` 的数据是按照 `d2` 列排序的。在示例 4 查询中，2 号算子的输出是无序的；4 号算子的输出是按照 `d2` 列排序的，均不满足 MJ 对序的要求，因此，分配了 1 和 3 号算子进行排序。
 
-```sql
+```shell
 obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1,tnlj2
           WHERE c2 = d2 AND c1 + d1 > 10\G
 *************************** 1. row ***************************
@@ -301,7 +285,7 @@ Outputs & filters:
 
 如下示例中，示例5 查询中联接条件是 `tnlj1.c1 = tnlj2.d1` ，它要求表 `tnlj1` 的数据是按照 `c1` 列排序的，表 `tnlj2` 的数据是按照 `d1` 列排序的。在这个执行计划中，表 `t2` 选择了主表扫描，结果是按照 `d1` 列排序的，因此不需要额外分配一个 `SORT` 算子。理想情况下，`JOIN` 的左右表选择了合适的索引，索引提供的数据顺序能够满足 MJ 的要求，此时不需要分配任何 `SORT` 算子。
 
-```sql
+```shell
 obclient> EXPLAIN SELECT /*+USE_MERGE(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1, tnlj2
           WHERE c1 = d1\G
 *************************** 1. row ***************************
@@ -344,7 +328,7 @@ Outputs & filters:
 
 2. 读取右子节点的数据，根据联接列计算哈希值（例如 `tnlj2.d1`），尝试与对应哈希表中 `tnlj1` 的数据进行联接。
 
-```sql
+```shell
 obclient> EXPLAIN SELECT /*+USE_HASH(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1, tnlj2
           WHERE c1 = d1 AND c2 + d2 > 1\G
 *************************** 1. row ***************************
@@ -377,4 +361,6 @@ Outputs & filters:
 | equal_conds | 等值联接，左右两侧的联接列会用于计算哈希值。                                         |
 | other_conds | 其他联接条件。 例如示例 6 查询中的 `tnlj1.c2 + tnlj2.d2 > 1`。 |
 
-关于执行计划的详细信息，请参考官方文档 《OceanBase 数据库性能调优》的 **SQL 调优** 章节。
+## 相关文档
+
+[SQL 调优概览](../../../../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md)
