--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
@@ -75,7 +75,7 @@
 
 * 使用 `CREATE UNIQUE INDEX` 语句为表创建唯一索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE test(c1 INT, c2 INT, c3 INT, c4 INT, PRIMARY KEY  (c1));
   Query OK, 0 rows affected
   
@@ -85,7 +85,7 @@
 
 * 使用 `ALTER TABLE` 语句为表创建唯一索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE test(c1 INT, c2 INT, c3 INT, c4 INT, PRIMARY KEY  (c1));
   Query OK, 0 rows affected
   
@@ -109,7 +109,7 @@
 
 * 使用 `CREATE INDEX` 语句为表创建非唯一索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE test(c1 INT, c2 INT, c3 INT, c4 INT, PRIMARY KEY(c1));
   Query OK, 0 rows affected
 
@@ -119,7 +119,7 @@
 
 * 使用 `ALTER TABLE` 语句为表创建非唯一索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE test(c1 INT, c2 INT, c3 INT, c4 INT, PRIMARY KEY  (c1));
   Query OK, 0 rows affected
   
@@ -147,7 +147,7 @@
 
 * 创建局部索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE tbl1_h(col1 INT PRIMARY KEY,col2 INT)
          PARTITION BY HASH(col1) PARTITIONS 5;
   Query OK, 0 rows affected
@@ -158,7 +158,7 @@
 
 * 创建局部唯一索引。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE tbl2_f_rl(col1 INT,col2 INT) 
         PARTITION BY RANGE(col1)
         SUBPARTITION BY LIST(col2)
@@ -203,7 +203,7 @@
 
   创建 Hash 分区一级分区表 `tbl1_h`，并为其创建采用 Range 分区的全局索引 `tbl1_h_idx1`。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE tbl1_h(col1 INT PRIMARY KEY,col2 INT)
         PARTITION BY HASH(col1) PARTITIONS 5;
   Query OK, 0 rows affected
@@ -221,7 +221,7 @@
 
   创建非模板化 Range + List 分区表 `tbl2_f_rl`，并为其创建全局唯一索引 `tbl2_f_rl_idx1`。
 
-  ```sql
+  ```shell
   obclient> CREATE TABLE tbl2_f_rl(col1 INT,col2 INT) 
         PARTITION BY RANGE(col1)
         SUBPARTITION BY LIST(col2)
@@ -240,8 +240,109 @@
   Query OK, 0 rows affected
   ```
 
+## 创建空间索引
+
+OceanBase 数据库支持创建常规索引的语法创建空间索引，但使用 `SPATIAL` 关键字。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>空间索引中引用数据类型的列必须指定 <code>SRID</code> 和 <code>NOT NULL</code>，否则创建成功的索引无法生效。</p>
+</main>
+
+您可以使用以下方法创建空间索引：
+
+* [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md) 时添加空间索引：
+
+  ```sql
+  CREATE TABLE table_name(column_g_name GEOMETRY NOT NULL,[column_name data_type,...] SPATIAL INDEX index_name(column_g_name));
+  ```
+
+* [ALTER TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.alter-table-of-mysql-mode.md) 时添加空间索引：
+
+  ```sql
+  ALTER TABLE table_name ADD SPATIAL INDEX index_name(column_g_name);
+  ```
+
+  <main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>OceanBase 数据库暂不支持通过 <code>ALTER TABLE</code> 来修改列的 <code>SRID</code> 属性，因此需要建表的时候定义好空间列的 <code>SRID</code> 属性，才能让空间索引生效。</p>
+  </main>
+
+* 通过 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-index-of-mysql-mode.md) 语句创建空间索引：
+
+  ```sql
+  CREATE SPATIAL INDEX index_name ON table_name(column_g_name);
+  ```
+
+  MySQL 租户里，索引名称在表范围内不能重复，查看索引可以通过命令 `SHOW INDEX`。
+
+**参数解释：**
+
+|    参数   | 描述 |
+|-----------|---------|
+| index_name  | 索引名称。 |
+| table_name  | 表名称。 |
+| column_name | 列名称。 |
+| data_type   | 数据类型。 |
+| column_g_name   | 空间数据类型的列名。 |
+
+### 示例
+
+* 创建 `tbl1_g` 表，同时添加索引 `tbl1_g_idx1`。
+
+  ```shell
+  obclient [test]> CREATE TABLE tbl1_g(id INT,name VARCHAR(18),g GEOMETRY NOT NULL SRID 0,SPATIAL INDEX tbl1_g_idx1(g));
+  Query OK, 0 rows affected
+
+  obclient [test]> SHOW INDEX FROM tbl1_g;
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | tbl1_g |          1 | tbl1_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  1 row in set
+  ```
+
+* 创建 `tbl2_g` 表，然后再修改表时增加索引 `tbl2_g_idx1`。
+
+  ```shell
+  obclient [test]> CREATE TABLE tbl2_g(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 0);
+  Query OK, 0 rows affected
+
+  obclient [test]> ALTER TABLE tbl2_g ADD SPATIAL INDEX tbl2_g_idx1(g);
+  Query OK, 0 rows affected
+
+  obclient [test]> SHOW INDEX FROM tbl2_g;
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | tbl2_g |          1 | tbl2_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  1 row in set
+  ```
+
+* 创建 `tbl3_g` 表，并通过 `CREATE INDEX` 语句创建索引 `tbl3_g_idx1`。
+
+  ```shell
+  obclient [test]> CREATE TABLE tbl3_g(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 0);
+  Query OK, 0 rows affected (0.060 sec)
+
+  obclient [test]> CREATE INDEX tbl3_g_idx1 ON tbl3_g(g);
+  Query OK, 0 rows affected (0.568 sec)
+
+  obclient [test]> SHOW INDEX FROM tbl3_g;
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  | tbl3_g |          1 | tbl3_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
+  +--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+  1 row in set
+  ```
+
 ## 相关文档
 
 * [查看索引](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md)
 
 * [删除索引](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/4.delete-an-index-of-mysql-mode.md)
+
+* [空间数据类型概述](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)
