--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -15,7 +15,6 @@
 
 * 请确认您已拥有待操作表的 `INSERT` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
 
-
 ## 使用 INSERT 语句插入数据
 
 请使用 [INSERT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 语句，再参考下面的建议，向表中插入数据。
@@ -38,7 +37,7 @@ INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
   
   查看列信息可以通过 `DESC` 语句查看。
 
-  ```sql
+  ```shell
   obclient [SYS]> DESC ordr;
   +-------+--------------+------+-----+---------+-------+
   | FIELD | TYPE         | NULL | KEY | DEFAULT | EXTRA |
@@ -55,7 +54,7 @@ INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
 
     * 如果列属性无默认值，则插入时必须指定该列的值。
 
-  * 如果列属性为 `NULL`，则可以在插入时不指定该列的值，系统会在该列上插入一个 NULL 值。
+  * 如果列属性为 `NULL`，则可以在插入时不指定该列的值，系统会在该列上插入一个 `NULL` 值。
 
 * 插入数据前，建议了解表上列的约束定义情况，避免插入数据时报错。
   
@@ -67,7 +66,7 @@ INSERT INTO table_name (list_of_columns) VALUES (list_of_values);
 
 假设待插入数据的表信息如下：
 
-```sql
+```shell
 obclient [SYS]> CREATE TABLE t_insert(
     id number NOT NULL PRIMARY KEY,
     name varchar(10) NOT NULL, 
@@ -76,13 +75,14 @@ obclient [SYS]> CREATE TABLE t_insert(
  );
 Query OK, 0 rows affected 
 ```
+
 其中，表的 `id` 列、`name` 列不能为空，且 `id` 列为主键列，满足唯一性约束要求，不能有重复的值； `gmt_create` 列指定了默认值。
 
 示例 1：使用多个单行插入语句插入多行数据。
 
 由于 `gmt_create` 列指定了默认值，在插入数据时可以不指定默认值。
 
-```sql
+```shell
 obclient [SYS]> INSERT INTO t_insert(id, name, value) 
 VALUES (1,'CN',10001);
 Query OK, 2 rows affected
@@ -94,7 +94,7 @@ Query OK, 2 rows affected
 
 注意，如果 `gmt_create` 列未指定默认值，则在插入数据时，必须指定值，语句如下。
 
-```sql
+```shell
 obclient [SYS]> INSERT INTO t_insert(id, name, value, gmt_create)
  VALUES (3,'EN', 10003, sysdate);
 Query OK, 1 row affected 
@@ -108,7 +108,7 @@ Query OK, 1 row affected
 
 示例 2：批量插入多行数据。
 
-```sql
+```shell
 obclient [SYS]> INSERT INTO t_insert(id, name, value) 
   VALUES (1,'CN',10001),(2,'US', 10002);
 Query OK, 2 rows affected
@@ -118,7 +118,7 @@ Query OK, 2 rows affected
 
 示例 3：将表 `t_insert` 中的全部数据备份到 `t_insert_bak` 表中。
 
-```sql
+```shell
 obclient [SYS]> SELECT * FROM t_insert;
 +----+------+-------+------------+
 | ID | NAME | VALUE | GMT_CREATE |
@@ -158,8 +158,39 @@ obclient [SYS]> SELECT * FROM t_insert_bak;
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p> 在使用 <code>INSERT<code> 语句插入数据时，如果表上有唯一性约束，则在插入相同的记录时，系统会报错，您可以通过 `MERGE INTO` 语句来更新表记录，避免唯一性约束的冲突。  </p>
+  <p> 在使用 <code>INSERT</code> 语句插入数据时，如果表上有唯一性约束，则在插入相同的记录时，系统会报错，您可以通过 <code>MERGE INTO</code> 语句来更新表记录，避免唯一性约束的冲突。 </p>
 </main>
+
+## 通过 DBLink 使用 INSERT 语句插入数据
+
+当前 OceanBase 数据库支持通过 DBLink 向 OceanBase 数据库（Oracle 模式）和 Oracle 数据库中写入数据。
+
+通过 DBLink 向远端数据库的表 `t1` 中插入一行数据 `(11,11)` 的示例如下：
+
+```shell
+obclient> SELECT * FROM t1@ob_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    1 |    1 |
++------+------+
+1 row in set
+
+obclient> INSERT INTO t1@ob_dblink VALUES (11,11);
+Query OK, 1 row affected
+
+obclient> commit;
+Query OK, 0 rows affected
+
+obclient> SELECT * FROM t1@ob_dblink;
++------+------+
+| C1   | C2   |
++------+------+
+|    1 |    1 |
+|   11 |   11 |
++------+------+
+2 rows in set
+```
 
 ## 相关文档
 
@@ -168,3 +199,5 @@ obclient [SYS]> SELECT * FROM t_insert_bak;
 * [删除数据](3.delete-data-of-oracle-mode.md)
 
 * [替换数据](4.replace-data-of-oracle-mode.md)
+
+* [通过 DBLink 修改远端数据库中的数据](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
